--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                             <div class="card shadow-lg">
                                 <div class="card-body">
                                     <p class="h4 card-title fw-bold">Cutting-edge Technology:</p>
-                                    <br>
-                                    <p style="padding: 1%;">User interface Design courses that cover the most recent trends</p>
-                                    <br>
+                                    <p style="padding: 2%; padding-top: 5%; padding-bottom: 12%;">User interface Design courses that cover the most recent trends</p>
                                     <a href="#" class="fw-bold" style="text-decoration: none; color: #008080;" >Learn More  ></a>
                                 </div>
                             </div>
